Changing path to movie file does not mark the project as changed #40791

Closed
opened 2014-06-24 17:30:05 +02:00 by Willi · 5 comments

System Information
Win7/64, GTX 750Ti

Blender Version
blender-2.71-29e8c46-win64

Short description of error
see title

Exact steps for others to reproduce the error

  • Open a movie file in the image editor
  • Save the blend file

Select a different movie file:

Bild_348.JPG

Problem: There is no asterisk shown in the window title bar indicating something has changed. Consequently, Blender doesn't notify about unsaved changes when quitting.

Thank you in advance

**System Information** Win7/64, GTX 750Ti **Blender Version** blender-2.71-29e8c46-win64 **Short description of error** see title **Exact steps for others to reproduce the error** - Open a movie file in the image editor - Save the blend file # Select a different movie file: ![Bild_348.JPG](https://archive.blender.org/developer/F95460/Bild_348.JPG) Problem: There is no asterisk shown in the window title bar indicating something has changed. Consequently, Blender doesn't notify about unsaved changes when quitting. Thank you in advance
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @willi-2

Added subscriber: @willi-2
Sergey Sharybin self-assigned this 2014-06-25 11:07:22 +02:00

This issue was referenced by aa620b5fed

This issue was referenced by aa620b5feddbec7562e428051bdc166221d80f63

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit aa620b5fed.

Closed by commit aa620b5fed.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40791
No description provided.