Fix T40791: Changing path to movie file does not mark the project as changed